--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Mi Página</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button
     class="navbar-toggler"
     type="button"
@@ -12,12 +11,21 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item">
         <a class="nav-link" href="#">Inicio</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#">Categorias</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Future Play</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">Juegos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Plataforma</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contacto</a>
@@ -25,3 +33,4 @@
     </ul>
   </div>
 </nav>
+<app-home></app-home>
