--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarNav"
-    aria-controls="navbarNav"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Inicio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Categorias</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Future Play</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Juegos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Plataforma</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contacto</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<app-home></app-home>
+<app-nav></app-nav>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
