--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,46 @@
-<div class="container">
+<header class="container text-center text-light my-4">
+  <h1>¡Descubre los mejores juegos gratis!</h1>
+  <p>Disponible para que puedas jugar en diferentes plataformas.</p>
+</header>
+<article class="text-light container">
+  <h2>Juegos Recientes</h2>
   <div class="row row-cols-1 row-cols-md-4 g-4">
-    <div *ngFor="let game of juegos" class="col">
-      <app-juego-card [game]="game"></app-juego-card>
+    <div *ngFor="let game of juegosNuevos" class="col">
+      <div class="col card m-2 bg-dark text-light">
+        <img src="{{ game.thumbnail }}" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">{{ game.title }}</h5>
+          <div class="card-text">
+            <p>{{ game.genre }}</p>
+            <p>{{ game.platform }}</p>
+            <p>
+              {{ game.short_description }}
+            </p>
+          </div>
+          <a href="{{ game.game_url }}"  target="_blank" class="btn btn-light">Ver Juego</a>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+</article>
+<article class="text-light container">
+    <h2>Juegos Más Relevantes</h2>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div *ngFor="let game of juegosRelev" class="col">
+        <div class="col card m-2 bg-dark text-light">
+          <img src="{{ game.thumbnail }}" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">{{ game.title }}</h5>
+            <div class="card-text">
+              <p>{{ game.genre }}</p>
+              <p>{{ game.platform }}</p>
+              <p>
+                {{ game.short_description }}
+              </p>
+            </div>
+            <a href="{{ game.game_url }}"  target="_blank" class="btn btn-light">Ver Juego</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </article>
