Seccion para filtrar por genero funcionando.

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -33,8 +33,8 @@
             </a>
           </div>
           <div class="container my-2">
-            <a class="fw-bold my-1 text-primario" routerLink="/juegos-categorias">
-              Categorias
+            <a class="fw-bold my-1 text-primario" routerLink="/juegos-genero">
+              Género
             </a>
           </div>
           <div class="container my-2">
