--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
-<header class="container text-center text-light my-4">
-  <h1>¡Descubre los mejores juegos gratis!</h1>
+<header class=" text-center text-light  bg-dark w-100 p-5 opaco fuente1">
+  <h1 class="my-4">¡Descubre los mejores juegos gratis!</h1>
   <p>Disponible para que puedas jugar en diferentes plataformas.</p>
 </header>
-<article class="text-light container">
+<article class="text-light container my-4">
   <h2>Juegos Recientes</h2>
   <div class="row row-cols-1 row-cols-md-4 g-4">
     <div *ngFor="let game of juegosNuevos" class="col">
@@ -23,7 +23,7 @@
     </div>
   </div>
 </article>
-<article class="text-light container">
+<article class="text-light container my-3">
     <h2>Juegos Más Relevantes</h2>
     <div class="row row-cols-1 row-cols-md-4 g-4">
       <div *ngFor="let game of juegosRelev" class="col">
