--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,3 +1,9 @@
 a {
   text-decoration: none;
 }
+header {
+  background-image: url(../../../assets/img/header.jpg) ;
+  object-fit: contain;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
