--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,32 +1,35 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button
-  class="navbar-toggler"
-  type="button"
-  data-bs-toggle="collapse"
-  data-bs-target="#navbarSupportedContent"
-  aria-controls="navbarSupportedContent"
-  aria-expanded="false"
-  aria-label="Toggle navigation"
->
-  <span class="navbar-toggler-icon"></span>
-</button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/inicio">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/juegos-genero">Categorias</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/juegos-nuevos">Nuevos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/juegos-todos">Juegos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/juegos-plataforma">Plataforma</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/inicio">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/juegos-genero">Género</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/juegos-plataforma">Plataforma</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/juegos-nuevos">Nuevos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/juegos-todos">Todos los Juegos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#contacto">Contacto</a>
+      </li>
+    </ul>
+  </div>
+</nav>
