--- a/src/app/components/seccion/juegos-genero/juegos-genero.component.html
+++ b/src/app/components/seccion/juegos-genero/juegos-genero.component.html
@@ -1,1 +1,45 @@
-<p>juegos-genero works!</p>
+<header class="container text-light text-center my-4">
+  <h1>¡Selecciona el Juego por tu Género Favorito!</h1>
+</header>
+<article class="container text-light text-center">
+  <h2 class="mb-4">Filtrar Juegos por Género</h2>
+
+  <div class="btn-group" role="group" aria-label="Género">
+    <button type="button" class="btn btn-dark" (click)="buscarTodos()">Todos</button>
+    <button type="button" class="btn btn-dark" (click)="buscarJuego('shooter')">
+      Shooter
+    </button>
+    <button type="button" class="btn btn-dark" (click)="buscarJuego('MMORPG')">
+      MMORPG
+    </button>
+    <button
+      type="button"
+      class="btn btn-dark"
+      (click)="buscarJuego('strategy')"
+    >
+      Estrategia
+    </button>
+    <button
+      type="button"
+      class="btn btn-dark"
+      (click)="buscarJuego('Fighting')"
+    >
+      Lucha</button
+    ><button type="button" class="btn btn-dark" (click)="buscarJuego('card')">
+      Juego de Cartas</button
+    ><button type="button" class="btn btn-dark" (click)="buscarJuego('MOBA')">
+      MOBA</button
+    ><button type="button" class="btn btn-dark" (click)="buscarJuego('Sports')">
+      Deportes</button
+    ><button type="button" class="btn btn-dark" (click)="buscarJuego('Racing')">
+      Carreras
+    </button>
+  </div>
+  <div class="container">
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div *ngFor="let game of juegos" class="col">
+        <app-juego-card [game]="game"></app-juego-card>
+      </div>
+    </div>
+  </div>
+</article>
