Seccion para filtrar por plataforma funcionando.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
               {{ game.short_description }}
             </p>
           </div>
-          <a href="{{ game.game_url }}"  target="_blank" class="btn btn-light">Ver Juego</a>
+          <a href="{{ game.game_url }}"  target="_blank" class="btn btn-danger">Ver Juego</a>
         </div>
       </div>
     </div>
@@ -38,7 +38,7 @@
                 {{ game.short_description }}
               </p>
             </div>
-            <a href="{{ game.game_url }}"  target="_blank" class="btn btn-light">Ver Juego</a>
+            <a href="{{ game.game_url }}"  target="_blank" class="btn btn-danger">Ver Juego</a>
           </div>
         </div>
       </div>
