--- a/src/app/components/seccion/juegos-flataforma/juegos-flataforma.component.html
+++ b/src/app/components/seccion/juegos-flataforma/juegos-flataforma.component.html
@@ -1,1 +1,24 @@
-<p>juegos-flataforma works!</p>
+<header class="container text-light text-center my-4">
+    <h1>¡Selecciona el Juego por tu Plataforma Favorita!</h1>
+  </header>
+  <article class="container text-light text-center">
+    <h2 class="mb-4">Filtrar Juegos por Plataforma</h2>
+  
+    <div class="btn-group" role="group" aria-label="Género">
+      <button type="button" class="btn btn-dark" (click)="buscarTodos()">Todos</button>
+      <button type="button" class="btn btn-dark" (click)="buscarJuego('pc')">
+        PC (Windows)
+      </button>
+      <button type="button" class="btn btn-dark" (click)="buscarJuego('browser')">
+        Web Browser
+      </button>
+    </div>
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-4 g-4">
+        <div *ngFor="let game of juegos" class="col">
+          <app-juego-card [game]="game"></app-juego-card>
+        </div>
+      </div>
+    </div>
+  </article>
+  
