Seccion para juegos nuevos terminado.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,9 +13,10 @@
           <div class="card-text">
             <p>{{ game.genre }}</p>
             <p>{{ game.platform }}</p>
-            <p>
-              {{ game.short_description }}
-            </p>
+            <p>{{ game.publisher }}</p>
+              <!-- <p>
+                {{ game.short_description }}
+              </p> -->
           </div>
           <a href="{{ game.game_url }}"  target="_blank" class="btn btn-danger">Ver Juego</a>
         </div>
@@ -34,9 +35,10 @@
             <div class="card-text">
               <p>{{ game.genre }}</p>
               <p>{{ game.platform }}</p>
-              <p>
+              <p>{{ game.publisher }}</p>
+              <!-- <p>
                 {{ game.short_description }}
-              </p>
+              </p> -->
             </div>
             <a href="{{ game.game_url }}"  target="_blank" class="btn btn-danger">Ver Juego</a>
           </div>
