--- a/src/app/components/seccion/juego-card/juego-card.component.html
+++ b/src/app/components/seccion/juego-card/juego-card.component.html
@@ -6,9 +6,12 @@
       <p>{{ game.genre }}</p>
       <p>{{game.platform}}</p>
       <p>
-        {{ game.short_description }}
+        {{ game.publisher }}
       </p>
+      <!-- <p>
+        {{ game.short_description }}
+      </p> -->
     </div>
-    <a href="{{ game.game_url }}"  target="_blank" class="btn btn-light">Ver Juego</a>
+    <a href="{{ game.game_url }}"  target="_blank" class="btn btn-danger">Ver Juego</a>
   </div>
 </div>
