--- a/src/app/components/seccion/juegos-todos/juegos-todos.component.html
+++ b/src/app/components/seccion/juegos-todos/juegos-todos.component.html
@@ -3,7 +3,8 @@
     ¡ Descubre los mejores juegos !
   </h1>
 </header>
-<div class="container">
+<div class="container text-light text-center">
+  <h2>Encuentra Tu Juego Gratis Favorito Gratis Aquí.</h2>
   <div class="row row-cols-1 row-cols-md-4 g-4">
     <div *ngFor="let game of juegos" class="col">
       <app-juego-card [game]="game"></app-juego-card>
