--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -13,22 +13,24 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/inicio">Inicio</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link" routerLink="/juegos-genero">Género</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/juegos-plataforma">Plataforma</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="/juegos-nuevos">Nuevos</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/juegos-todos">Todos los Juegos</a>
+      <li class="nav-item mx-1">
+        <img
+          src="../../../assets/futureplay.png"
+          routerLink="/inicio"
+          class="iconNav"
+          alt="futureplay"
+        />
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contacto">Contacto</a>
+        <a class="nav-link" routerLink="/juegos-plataforma">Plataforma</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/juegos-todos">Juegos</a>
       </li>
     </ul>
   </div>
