--- a/src/app/components/seccion/juego-card/juego-card.component.html
+++ b/src/app/components/seccion/juego-card/juego-card.component.html
@@ -1,5 +1,5 @@
 <div class="card m-2 bg-dark text-light">
-  <img src="{{ game.thumbnail }}" class="card-img-top" alt="..." />
+  <img [src]="game.thumbnail" class="card-img-top" alt="..." />
   <div class="card-body">
     <h5 class="card-title">{{ game.title }}</h5>
     <div class="card-text">
