--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="bg-oscuro">
     <hr class="mx-5" size="5" />
     <div class="container-fluid p-3 text-light">
       <div class="row row-cols-1 row-cols-md-3 g-4 align-items-center">
