--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,5 +1,8 @@
 .iconNav{
-    width: 55px;
+    width:55px;
     object-fit: contain;
     cursor: pointer;
+}
+.bg-oscuro{
+    background-color: black;
 }
