--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,36 +1,46 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-oscuro align-items-center">
+  <a class="navbar-brand d-lg-none d-xl-none d-xxl-none" routerLink="/inicio">
+    <img
+      src="../../../assets/futureplay.png"
+      class="iconNav mx-2"
+      alt="futureplay"
+    />
+  </a>
   <button
-    class="navbar-toggler"
+    class="navbar-toggler mx-2"
     type="button"
     data-bs-toggle="collapse"
-    data-bs-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
+    data-bs-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown"
     aria-expanded="false"
     aria-label="Toggle navigation"
   >
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mx-auto">
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav mx-auto d-flex align-items-center">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/juegos-genero">Género</a>
+        <a class="nav-link" routerLink="/juegos-genero">GENEROS</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/juegos-nuevos">Nuevos</a>
+        <a class="nav-link" routerLink="/juegos-nuevos">NUEVOS</a>
       </li>
-      <li class="nav-item mx-1">
-        <img
-          src="../../../assets/futureplay.png"
+      <li>
+        <a
+          class="navbar-brand d-none d-lg-block d-xl-block d-xxl-block mx-0"
           routerLink="/inicio"
-          class="iconNav"
-          alt="futureplay"
-        />
+        >
+          <img
+            src="../../../assets/futureplay.png"
+            class="iconNav mx-2"
+            alt="futureplay"
+        /></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/juegos-plataforma">Plataforma</a>
+        <a class="nav-link" routerLink="/juegos-plataforma">PLATAFORMAS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/juegos-todos">Juegos</a>
+        <a class="nav-link" routerLink="/juegos-todos">JUEGOS</a>
       </li>
     </ul>
   </div>
